[package]
name = "cg"
version = "0.1.0"
authors = ["Waffle <waffle.lapkin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
ron = "0.6.0"
once_cell = "1.4"
kiam = { git = "https://github.com/WaffleLapkin/kiam.git", rev = "f341628" }
itertools = "0.9"
fntools = { git = "https://github.com/WaffleLapkin/fntools.git", rev = "dedeb6a" }
